test/Fail/Issue4525c.agda
@0 F : @0 Set → Set
F A = λ { → A }
